--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,109 @@
+apturl==0.5.2
 asgiref==3.8.1
 asttokens==2.4.1
-attrs==23.2.0
-autobahn==23.6.2
-Automat==22.10.0
-certifi==2024.6.2
-cffi==1.16.0
-channels==4.1.0
-charset-normalizer==3.3.2
-constantly==23.10.4
-cryptography==42.0.7
-daphne==4.1.2
+bcrypt==3.2.0
+beautifulsoup4==4.12.3
+blinker==1.4
+Brlapi==0.8.3
+certifi==2020.6.20
+chardet==4.0.0
+ci-info==0.3.0
+click==8.0.3
+colorama==0.4.4
+configobj==5.0.8
+configparser==7.0.0
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
 decorator==5.1.1
-defusedxml==0.8.0rc2
-Django==5.0.6
-django-allauth==0.63.3
-django-debug-toolbar==4.4.2
+defer==1.0.6
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+duplicity==0.8.21
+etelemetry==0.3.1
 exceptiongroup==1.2.1
 executing==2.0.1
-hyperlink==21.0.0
-idna==3.7
-incremental==22.10.0
+fasteners==0.14.1
+filelock==3.14.0
+future==0.18.2
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.6.4
 ipython==8.25.0
+isodate==0.6.1
 jedi==0.19.1
+jeepney==0.7.1
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+looseversion==1.3.0
+louis==3.20.0
+lxml==5.2.2
+macaroonbakery==1.3.1
 matplotlib-inline==0.1.7
-oauthlib==3.2.2
+monotonic==1.6
+more-itertools==8.10.0
+networkx==3.3
+nibabel==5.2.1
+nipype==1.8.6
+norminette==3.3.55
+numpy==1.26.4
+oauthlib==3.2.0
+olefile==0.46
+packaging==24.1
+pandas==2.2.2
+paramiko==2.9.3
 parso==0.8.4
-pexpect==4.9.0
-pillow==10.3.0
+pathlib==1.0.1
+pexpect==4.8.0
+Pillow==9.0.1
 prompt_toolkit==3.0.46
-psycopg==3.1.19
+protobuf==3.12.4
+prov==2.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.22
+pycairo==1.20.1
+pycups==2.0.1
+pydot==2.0.0
 Pygments==2.18.0
-PyJWT==2.8.0
-pyOpenSSL==24.1.0
-python-decouple==3.8
-python-social-auth==0.2.1
-python3-openid==3.2.0
-requests==2.32.3
-requests-oauthlib==0.3.1
-service-identity==24.1.0
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==3.1.2
+pyRFC3339==1.1
+python-apt==2.4.0+ubuntu3
+python-dateutil==2.9.0.post0
+python-debian==0.1.43+ubuntu1.1
+pytz==2022.1
+pyxdg==0.27
+pyxnat==1.6.2
+PyYAML==5.4.1
+rdflib==7.0.0
+reportlab==3.6.8
+requests==2.25.1
+scipy==1.13.1
+SecretStorage==3.3.1
+simplejson==3.19.2
 six==1.16.0
-social-auth-app-django==5.4.1
-social-auth-core==4.5.4
+soupsieve==2.5
 sqlparse==0.5.0
 stack-data==0.6.3
+systemd-python==234
 traitlets==5.14.3
-Twisted==24.3.0
-txaio==23.1.1
+traits==6.3.2
 typing_extensions==4.12.1
-urllib3==2.2.1
+tzdata==2024.1
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+unattended-upgrades==0.1
+urllib3==1.26.5
+usb-creator==0.3.7
+wadllib==1.3.6
 wcwidth==0.2.13
-zope.interface==6.4.post2
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
